# test-task-inforce

./: README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  entrypoint.sh  middleware.py  pyproject.toml
app/app/: settings.py  urls.py
app/restaurants/: models.py  serializers.py  tests.py  urls.py  views.py
app/restaurants/management/commands/: create_test_data.py
app/restaurants/migrations/: 0001_initial.py  0002_vote.py
app/users/: models.py  serializers.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
